interactivity for topic graph, component communication, added sentiment router handler, re added sentiment analysis in pipeline

--- a/static/src/dashboard/topic-graph-template.html
+++ b/static/src/dashboard/topic-graph-template.html
@@ -3,11 +3,18 @@
         fill: #2196f3;
         stroke: #2196f3;
     }
+
+    .selected {
+        fill: #4caf50;
+        stroke: #4caf50;
+    }
+
     .node text {
         pointer-events: none;
         font: 10px sans-serif;
         stroke: black;
     }
+
 </style>
 <div class="panel panel-default">
   <div id="topic-graph"></div>
