created sentiment table

--- a/static/src/dashboard/keyword-frequency-graph.html
+++ b/static/src/dashboard/keyword-frequency-graph.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel
+  <div id="keyword-frequency-graph" class="panel-body">
+
   </div>
 </div>
