--- a/static/src/dashboard/sentiment-table.html
+++ b/static/src/dashboard/sentiment-table.html
@@ -1,5 +1,4 @@
 <div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel
+  <div id="sentiment-table" class="panel-body">
   </div>
 </div>
