--- a/static/src/dashboard/topic-graph-template.html
+++ b/static/src/dashboard/topic-graph-template.html
@@ -17,5 +17,5 @@
 
 </style>
 <div class="panel panel-default">
-  <div id="topic-graph"></div>
+  <div id="topic-graph" class="panel-body"></div>
 </div>
