--- a/static/src/dashboard/sentiment-table.html
+++ b/static/src/dashboard/sentiment-table.html
@@ -1,4 +1,21 @@
+<style>
+
+</style>
+
+<script type="text/ng-template" id="sentiment-table-tooltip.html">
+    <div class="panel panel-{{props.class}}">
+        <div class="panel-heading">
+            {{(value * 100) | number:0}}% {{props.display}}
+        </div>
+    </div>
+</script>
+
 <div class="panel panel-default">
-  <div id="sentiment-table" class="panel-body">
-  </div>
+    <div class="panel-heading">
+        <h5 ng-if="vm.data">
+            Sentiment towards <span class="text-primary">{{vm.data.id}}</span>
+        </h5>
+    </div>
+    <div id="sentiment-table" class="panel-body">
+    </div>
 </div>
