finished side bar

--- a/static/src/main/main-template.html
+++ b/static/src/main/main-template.html
@@ -12,7 +12,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a ui-sref="wordsearch({college: shell.vm.college})">Search</a></li>
+                    <li><a ui-sref="main.wordsearch({college: shell.vm.college})">Search</a></li>
                     <li><a>Compare</a></li>
                     <li><a>About</a></li>
                 </ul>
