--- a/static/src/wordsearch/wordsearch-template.html
+++ b/static/src/wordsearch/wordsearch-template.html
@@ -5,27 +5,34 @@
             <input type="text" class="form-control" placeholder="search reddit submissions" aria-describedby="basic-addon1">
         </div>
         <div class="btn-group btn-group-justified top-buffer">
-            <a  class="btn btn-default">Score</a>
-            <a  class="btn btn-default">Frequency</a>
-            <a  class="btn btn-default">Sentiment</a>
+            <a  ui-sref-active="btn-primary"
+                ui-sref="main.wordsearch({vizType: 'score'})"
+                class="btn btn-default">Score</a>
+            <a  ui-sref-active="btn-primary"
+                class="btn btn-default"
+                ui-sref="main.wordsearch({vizType: 'frequency'})">Frequency</a>
+            <a  ui-sref-active="btn-primary"
+                class="btn btn-default"
+                ui-sref="main.wordsearch({vizType: 'sentiment'})">Sentiment</a>
         </div>
         <div class="dropdown top-buffer">
             <button class="btn btn-default dropdown-toggle btn-block" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Colleges
             <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu" role="menu">
+            <ul class="dropdown-menu dropdown-menu-right" role="menu">
                 <li ng-repeat="college in ws.vm.colleges"
                     class="btn-block"
                     ng-click="ws.select(college)">
-                    <span><input type="checkbox">{{college}}</span>
+                    <span><input type="checkbox">{{college.name}}</span>
                 </li>
             </ul>
         </div>
         <ul class="list-group top-buffer">
             <li ng-repeat="college in ws.vm.selected"
-                class="list-group-item">
-                {{college}}
+                class="list-group-item"
+                style="background-color: {{college.color}}">
+                {{college.name}}
             </li>
         </ul>
     </div>
