--- a/static/src/wordsearch/wordsearch-template.html
+++ b/static/src/wordsearch/wordsearch-template.html
@@ -3,29 +3,34 @@
         <div class="input-group">
             <span class="input-group-addon glyphicon glyphicon-search" id="basic-addon1"></span>
             <input  type="text"
-                    class="form-control"
-                    placeholder="search reddit submissions"
-                    aria-describedby="basic-addon1"
-                    ng-model="ws.searchTerm">
+            class="form-control"
+            placeholder="search reddit submissions"
+            aria-describedby="basic-addon1"
+            ng-model="ws.query">
+            <span class="input-group-btn">
+                <button class="btn btn-default"
+                    type="button"
+                    ng-click="ws.search()">search</button>
+            </span>
         </div>
         <div class="btn-group btn-group-justified top-buffer">
             <a  id="wordsearch-score"
                 class="btn btn-default"
-                ng-click="ws.selectVizType('score')">Score</a>
+            ng-click="ws.selectVizType('score')">Score</a>
             <a  id="wordsearch-frequency"
                 class="btn btn-default"
-                ng-click="ws.selectVizType('frequency')">Frequency</a>
+            ng-click="ws.selectVizType('frequency')">Frequency</a>
             <a  id="wordsearch-sentiment"
                 class="btn btn-default"
                 ng-click="ws.selectVizType('sentiment')"
-                >Sentiment</a>
+            >Sentiment</a>
         </div>
         <div class="dropdown top-buffer">
             <button class="btn btn-default dropdown-toggle btn-block" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Colleges
             <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu dropdown-menu-right" role="menu">
+            <ul class="dropdown-menu" role="menu">
                 <li ng-repeat="college in ws.vm.colleges"
                     class="btn-block"
                     ng-click="ws.select(college)">
