finished frequency and score graphs

--- a/static/src/main/main-template.html
+++ b/static/src/main/main-template.html
@@ -18,5 +18,10 @@
                 </ul>
             </div>
         </div>
-    </nav>
-    <div ui-view></div>
+</nav>
+<div ui-view></div>
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+  <div class="container">
+
+  </div>
+</nav>
